--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./dist/main.css" />
-    <title>Scatter Ball</title>
-    <style type="text/css">
-      canvas {
-        border: 1px solid black;
-        display: block;
-        margin: auto
-      }
-      body {
-        margin: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="./main.css" />
+    <title>Field Goal Kick</title>
+
 </head>
 
 <body>
-  <h1 class="title">Scatter Ball</h1>
-  <canvas id="canvas" width="850px" height="700px"></canvas>
-  <img class="entity" src="./imgs/marble.png/" alt="" id="marble">
-  <img class="entity" src="./imgs/basket.png/" alt="" id="basket">
-  <!-- <img class="entity" src="./imgs/divider.png/" alt="" id="divider"> -->
+  <h1 class="title">Field Goal Kick</h1>
+  <div class="left">
+  <button id="start-button">Start</button>
+    <h2 class="instructions">Instructions</h2>
+    <p class="instructions2">
+      Use the <- and -> keys to move the field 
+      <br>
+      goal post. Catch the footballs as they fall. 
+      <br>
+      Each football caught is 1 point.
+    </p>
+  </div>
+
+  <canvas id="canvas" width="760px" height="700px"></canvas>
+  <!-- <img class="entity" src="./assets/marble.png" alt="" id="marble">
+  <img class="entity" src="./assets/basket.png" alt="" id="basket"> -->
   <script src="./src/scripts/index.js"></script>
   <!-- <script src="./dist/main.js"></script>     -->
-</body>
 
+  <div class="right">
+    <a href="https://github.com/dchaan"><i class="fab fa-github"></i></a>
+  </div>  
+  </body>
 </html>
