--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       Each football caught is 1 point.
     </p>
   </div>
-
+  
   <canvas id="canvas" width="760px" height="700px"></canvas>
   <!-- <img class="entity" src="./assets/marble.png" alt="" id="marble">
   <img class="entity" src="./assets/basket.png" alt="" id="basket"> -->
@@ -34,4 +34,8 @@
     <a href="https://github.com/dchaan"><i class="fab fa-github"></i></a>
   </div>  
   </body>
+
+  <footer>
+    <audio controls autoplay src="./assets/crowd.mp3"></audio>
+  </footer>
 </html>
