--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
   </div>
   
   <canvas id="canvas" width="760px" height="700px"></canvas>
-  <!-- <img class="entity" src="./assets/marble.png" alt="" id="marble">
-  <img class="entity" src="./assets/basket.png" alt="" id="basket"> -->
   <script src="./src/scripts/index.js"></script>
   <!-- <script src="./dist/main.js"></script>     -->
 
@@ -36,6 +34,6 @@
   </body>
 
   <footer>
-    <audio controls autoplay src="./assets/crowd.mp3"></audio>
+    <audio controls loop autoplay src="./assets/crowd.mp3"></audio>
   </footer>
 </html>
