--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <canvas id="canvas" width="760px" height="700px"></canvas>
   <script src="./src/scripts/index.js"></script>
-  <!-- <script src="./dist/main.js"></script>     -->
+  <script src="./dist/main.js"></script>    
 
   <div class="right">
     <a href="https://github.com/dchaan"><i class="fab fa-github"></i></a>
