--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./dist/main.css" />
+    <!-- <link rel="stylesheet" href="./src/index.scss" /> -->
+    <script src="./dist/main.js"></script>    
+
+
     <title>Field Goal Kick</title>
 
 </head>
@@ -25,8 +29,6 @@
   </div>
   
   <canvas id="canvas" width="760px" height="700px"></canvas>
-  <script src="./src/scripts/index.js"></script>
-  <script src="./dist/main.js"></script>    
 
   <div class="right">
     <a href="https://github.com/dchaan"><i class="fab fa-github"></i></a>
