--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="left-container">
-      <div class="title">
-        Scatter Ball
+      <div class="title-container">
+        <div class="title">Scatter Ball</div>
       </div>
       <div class="instructions-container">
         <p class="instructions-sub">
@@ -20,13 +20,14 @@
           You have 3 lives!
         </p>
       </div>
+      <div class="footer-container">
+        <a href="https://dchaan.github.io/Portfolio/"><img src="/assets/portfolio.png" class="footer-img"/></a>
+        <a href="https://www.linkedin.com/in/david-chan-4b1929185/"><img src="/assets/linkedin.png" class="footer-img"/></a>
+        <a href="https://github.com/dchaan"><img src="/assets/github.png" class="footer-img"/></a>
+      </div>
     </div>
     <script type="text/javascript" src="./src/phaser/dist/phaser.min.js"></script>
     <script type="text/javascript" src="./src/index.js"></script>
   </body>
-  <footer class="footer-container">
-    <a href="https://dchaan.github.io/Portfolio/"><img src="/assets/portfolio.png" class="footer-img"/></a>
-    <a href="https://www.linkedin.com/in/david-chan-4b1929185/"><img src="/assets/linkedin.png" class="footer-img"/></a>
-    <a href="https://github.com/dchaan"><img src="/assets/github.png" class="footer-img"/></a>
-  </footer>
+  
 </html>
