--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
       <div class="instructions-container">
         <p class="instructions-sub">
           Use the <- and -> keys to move the basket.<br>
+          You have 3 lives!<br>
           Catch the balls as they fall.<br>
-          Each ball caught is 1 point.<br>
-          You have 3 lives!
+          Each ball caught is worth 1 point.<br>
         </p>
       </div>
       <div class="footer-container">
-        <a href="https://dchaan.github.io/Portfolio/"><img src="/assets/portfolio.png" class="footer-img"/></a>
-        <a href="https://www.linkedin.com/in/david-chan-4b1929185/"><img src="/assets/linkedin.png" class="footer-img"/></a>
-        <a href="https://github.com/dchaan"><img src="/assets/github.png" class="footer-img"/></a>
+        <div class="footer-links">
+          <a href="https://dchaan.github.io/Portfolio/" target="_blank"><img src="/assets/portfolio.png" class="footer-img"/></a>
+          <a href="https://www.linkedin.com/in/david-chan-4b1929185/" target="_blank"><img src="/assets/linkedin.png" class="footer-img"/></a>
+          <a href="https://github.com/dchaan" target="_blank"><img src="/assets/github.png" class="footer-img"/></a>
+        </div>
+        <p class="footer-text">A JavaScript game created by David Chan.</p>
       </div>
     </div>
   </body>
