Fix footer links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
       <div class="footer-container">
         <div class="footer-links">
-          <a href="https://dchaan.github.io/Portfolio/" target="_blank"><img src="assets/portfolio.png" class="footer-img"/></a>
-          <a href="https://www.linkedin.com/in/david-chan-4b1929185/" target="_blank"><img src="assets/linkedin.png" class="footer-img"/></a>
-          <a href="https://github.com/dchaan" target="_blank"><img src="assets/github.png" class="footer-img"/></a>
+          <a href="https://dchaan.github.io/Portfolio/" target="_blank"><img src="/assets/portfolio.png" class="footer-img"/></a>
+          <a href="https://www.linkedin.com/in/david-chan-4b1929185/" target="_blank"><img src="/assets/linkedin.png" class="footer-img"/></a>
+          <a href="https://github.com/dchaan" target="_blank"><img src="/assets/github.png" class="footer-img"/></a>
         </div>
         <p class="footer-text">A JavaScript game created by David Chan.</p>
       </div>
