--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <p class="instructions-sub">
           Use the <- and -> keys to move the basket.<br>
           You have 3 lives!<br>
-          Catch the balls as they fall.<br>
+          Catch the falling balls.<br>
           Each ball caught is worth 1 point.<br>
+          Each ball dropped removes 1 life.
         </p>
       </div>
       <div class="footer-container">
