--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Scatter Ball" />
-    <meta property="og:image" content="/assets/projectpic.png" />
+    <meta property="og:image" content="./assets/projectpic.png" />
     <meta property="og:url" content="https://dchaan.github.io/Scatter-Ball/" />
 
     <link rel="stylesheet" href="./dist/main.css" />
